testdata/baselines/reference/compiler/declarationEmitTypeAliasCannotBeNamed.errors.txt
main.ts(8,11): error TS4053: Return type of public method from exported class has or is using name 'Base' from external module "lib" but cannot be named.


==== lib.ts (0 errors) ====
    interface Base { }
    
    export type ExportBase = Base;
    
==== main.ts (1 errors) ====
    import type { ExportBase } from './lib.js'
    
    interface Clonable<T> {
        clone(): Clonable<T>
    }
    
    export default class C {
        async method(res: Clonable<{ key: ExportBase }>) {
              ~~~~~~
!!! error TS4053: Return type of public method from exported class has or is using name 'Base' from external module "lib" but cannot be named.
            if (Math.random() > 0.5) {
                res.clone();
            } else {
                return res.clone();
            }
        };
    }
    